# hit

./: .env.example  .gitignore  INTERFACE_NOTES.md  README.md  deploy.sh  pyproject.toml  run_miner.sh  setup.py
config/: datasets.yaml  metrics.yaml
docs/decisions/: 0001-mermaid-for-diagrams.md  README.md
docs/diagrams/: 00-overview.md  01-deploy.md  02-runtime-forecast.md  03-evaluation.md  README.md
docs/journal/: 2026-04-27.md  README.md
scripts/: store_status.py
src/: __init__.py  config.py  main.py
src/data/: binance_client.py  candles.py  cm_client.py
src/data/futures/: __init__.py  mexc_futures.py
src/data/sentiment/: __init__.py  cryptopanic.py  fear_greed.py  reddit.py
src/eval/: db.py  futures_recorder.py  metrics.py  recorder.py  sentiment_recorder.py
src/features/: futures.py  returns.py  sentiment.py  volatility.py
src/forecast/: baseline.py  interval.py
src/miner/: adapter.py  forward_custom.py
src/risk/: guards.py
src/storage/: archive.py  normalize.py  serve.py
src/utils/: logging_utils.py  time_utils.py
tests/: README.md  test_fallbacks.py  test_forecast_shapes.py  test_interval_validity.py  test_recorder_schema_v2.py
