[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[project]
name = "precog-baseline-miner"
version = "0.1.0"
description = "Baseline miner for the Coin Metrics Precog Bittensor subnet"
requires-python = ">=3.9,<3.12"
dependencies = [
    "requests>=2.32",
    "pandas>=2.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
